# lntu

op_s2/: CMakeLists.txt
op_s2/fonts/: ubuntu.mono.ttf.inc
op_s2/src/: lab1_cli.cpp  lab2_cli2.cpp  lab3_bookshop.cpp  lab4_bookshop2.cpp  lab5_string.cpp  lab6_bmp.cpp  lab7_glyph_rendering.cpp  lab8_text_rendering.cpp  lab9_wav.cpp
op_s2/src/image/: bmp.cpp  bmp.h  color.cpp  color.h  image.cpp  image.h
op_s2/src/lab7_8_text_rendering/: CMakeLists.txt
op_s2/src/lab7_8_text_rendering/src/: bmp.cpp  bmp.h  color.cpp  color.h  font.cpp  font.h  image.cpp  image.h  main.cpp  string.cpp  string.h  text.cpp  text.h  utf8.cpp  utf8.h
op_s2/src/sound/: functions.cpp  functions.h  wav.cpp  wav.h  wave.cpp  wave.h
op_s2/src/string/: string.cpp  string.h
op_s2/src/text/: font.cpp  font.h  text.cpp  text.h  utf8.cpp  utf8.h
